@@ -20,7 +20,6 @@ package com.graphhopper.routing;
 import com.graphhopper.routing.ev.*;
 import com.graphhopper.routing.util.DefaultEdgeFilter;
 import com.graphhopper.routing.util.FlagEncoder;
-import com.graphhopper.routing.util.TransportationMode;
 import com.graphhopper.routing.weighting.Weighting;
 import com.graphhopper.storage.Graph;
 import com.graphhopper.storage.NodeAccess;
@@ -42,19 +41,13 @@ public class InstructionsFromEdges implements Path.EdgeVisitor {
     private final FlagEncoder encoder;
     private final NodeAccess nodeAccess;
 
-    private final Translation tr;
     private final InstructionList ways;
     private final EdgeExplorer outEdgeExplorer;
     private final EdgeExplorer crossingExplorer;
     private final BooleanEncodedValue roundaboutEnc;
     private final BooleanEncodedValue accessEnc;
-    private final BooleanEncodedValue getOffBikeEnc;
     private final BooleanEncodedValue roadClassLinkEnc;
-    private final EnumEncodedValue<RouteNetwork> bikeRouteEnc;
     private final EnumEncodedValue<RoadClass> roadClassEnc;
-    private final EnumEncodedValue<RoadEnvironment> roadEnvEnc;
-    private final EnumEncodedValue<RoadAccess> roadAccessEnc;
-    private final EnumEncodedValue<Toll> tollEnc;
     private final DecimalEncodedValue maxSpeedEnc;
 
     /*
@@ -88,31 +81,19 @@ public class InstructionsFromEdges implements Path.EdgeVisitor {
     private boolean prevInRoundabout;
     private String prevName;
     private String prevInstructionName;
-    private InstructionAnnotation prevAnnotation;
 
-    private final int MAX_U_TURN_DISTANCE = 35;
+    private static final int MAX_U_TURN_DISTANCE = 35;
 
     public InstructionsFromEdges(Graph graph, Weighting weighting, EncodedValueLookup evLookup,
-                                 Translation tr, InstructionList ways) {
+                                 InstructionList ways) {
         this.encoder = weighting.getFlagEncoder();
         this.weighting = weighting;
         this.accessEnc = evLookup.getBooleanEncodedValue(getKey(encoder.toString(), "access"));
         this.roundaboutEnc = evLookup.getBooleanEncodedValue(Roundabout.KEY);
-
-        // both EncodedValues are optional; And return annotation only when instructions for bike encoder is requested
-        String key = RouteNetwork.key("bike");
-        this.bikeRouteEnc = evLookup.hasEncodedValue(key) ? evLookup.getEnumEncodedValue(key, RouteNetwork.class) : null;
-        this.getOffBikeEnc = encoder.getTransportationMode() == TransportationMode.BIKE && evLookup.hasEncodedValue(GetOffBike.KEY)
-                ? evLookup.getBooleanEncodedValue(GetOffBike.KEY) : null;
-        this.tollEnc = evLookup.hasEncodedValue(Toll.KEY) ? evLookup.getEnumEncodedValue(Toll.KEY, Toll.class) : null;
-
         this.roadClassEnc = evLookup.getEnumEncodedValue(RoadClass.KEY, RoadClass.class);
         this.roadClassLinkEnc = evLookup.getBooleanEncodedValue(RoadClassLink.KEY);
         this.maxSpeedEnc = evLookup.getDecimalEncodedValue(MaxSpeed.KEY);
-        this.roadEnvEnc = evLookup.getEnumEncodedValue(RoadEnvironment.KEY, RoadEnvironment.class);
-        this.roadAccessEnc = evLookup.getEnumEncodedValue(RoadAccess.KEY, RoadAccess.class);
         this.nodeAccess = graph.getNodeAccess();
-        this.tr = tr;
         this.ways = ways;
         prevNode = -1;
         prevInRoundabout = false;
@@ -130,7 +111,7 @@ public class InstructionsFromEdges implements Path.EdgeVisitor {
             if (path.getEdgeCount() == 0) {
                 ways.add(new FinishInstruction(graph.getNodeAccess(), path.getEndNode()));
             } else {
-                path.forEveryEdge(new InstructionsFromEdges(graph, weighting, evLookup, tr, ways));
+                path.forEveryEdge(new InstructionsFromEdges(graph, weighting, evLookup, ways));
             }
         }
         return ways;
@@ -165,50 +146,17 @@ public class InstructionsFromEdges implements Path.EdgeVisitor {
         }
 
         String name = edge.getName();
-        String info = "";
-        int importance = 1;
-        if (getOffBikeEnc != null) {
-            if (edge.get(roadClassEnc) == RoadClass.CYCLEWAY
-                    || bikeRouteEnc != null && edge.get(bikeRouteEnc) != RouteNetwork.MISSING) {
-                // for backward compatibility
-                importance = 0;
-                info = tr.tr("cycleway");
-            } else if (edge.get(getOffBikeEnc)) {
-                info = tr.tr("off_bike");
-            }
-        }
-
-        RoadEnvironment re = edge.get(roadEnvEnc);
-        if (re == RoadEnvironment.FORD) {
-            importance = 2; // could be dangerous
-            info = tr.tr("way_contains_ford");
-        } else if (re == RoadEnvironment.FERRY) {
-            info = tr.tr("way_contains_ferry");
-        }
-
-        // if private access is allowed we need a warning
-        RoadAccess ra = edge.get(roadAccessEnc);
-        if (ra == RoadAccess.PRIVATE)
-            info = info.isEmpty() ? tr.tr("way_contains_private") : info + ", " + tr.tr("way_contains_private");
-
-        if (tollEnc != null && edge.get(tollEnc) != Toll.NO)
-            info = info.isEmpty() ? tr.tr("way_contains_toll") : info + ", " + tr.tr("way_contains_toll");
-
-        InstructionAnnotation annotation = info.isEmpty()
-                ? InstructionAnnotation.EMPTY
-                : new InstructionAnnotation(importance, info);
 
         if ((prevName == null) && (!isRoundabout)) // very first instruction (if not in Roundabout)
         {
             int sign = Instruction.CONTINUE_ON_STREET;
-            prevInstruction = new Instruction(sign, name, annotation, new PointList(10, nodeAccess.is3D()));
+            prevInstruction = new Instruction(sign, name, new PointList(10, nodeAccess.is3D()));
             double startLat = nodeAccess.getLat(baseNode);
             double startLon = nodeAccess.getLon(baseNode);
             double heading = AngleCalc.ANGLE_CALC.calcAzimuth(startLat, startLon, latitude, longitude);
             prevInstruction.setExtraInfo("heading", Helper.round(heading, 2));
             ways.add(prevInstruction);
             prevName = name;
-            prevAnnotation = annotation;
 
         } else if (isRoundabout) {
             // remark: names and annotations within roundabout are ignored
@@ -216,7 +164,7 @@ public class InstructionsFromEdges implements Path.EdgeVisitor {
             {
                 int sign = Instruction.USE_ROUNDABOUT;
                 RoundaboutInstruction roundaboutInstruction = new RoundaboutInstruction(sign, name,
-                        annotation, new PointList(10, nodeAccess.is3D()));
+                        new PointList(10, nodeAccess.is3D()));
                 prevInstructionPrevOrientation = prevOrientation;
                 if (prevName != null) {
                     // check if there is an exit at the same node the roundabout was entered
@@ -242,7 +190,6 @@ public class InstructionsFromEdges implements Path.EdgeVisitor {
                 {
                     prevOrientation = AngleCalc.ANGLE_CALC.calcOrientation(prevLat, prevLon, latitude, longitude);
                     prevName = name;
-                    prevAnnotation = annotation;
                 }
                 prevInstruction = roundaboutInstruction;
                 ways.add(prevInstruction);
@@ -281,10 +228,9 @@ public class InstructionsFromEdges implements Path.EdgeVisitor {
 
             prevInstructionName = prevName;
             prevName = name;
-            prevAnnotation = annotation;
 
         } else {
-            int sign = getTurn(edge, baseNode, prevNode, adjNode, annotation, name);
+            int sign = getTurn(edge, baseNode, prevNode, adjNode, name);
 
             if (sign != Instruction.IGNORE) {
                 /*
@@ -330,12 +276,11 @@ public class InstructionsFromEdges implements Path.EdgeVisitor {
                     prevInstruction.setSign(uTurnType);
                     prevInstruction.setName(name);
                 } else {
-                    prevInstruction = new Instruction(sign, name, annotation, new PointList(10, nodeAccess.is3D()));
+                    prevInstruction = new Instruction(sign, name, new PointList(10, nodeAccess.is3D()));
                     // Remember the Orientation and name of the road, before doing this maneuver
                     prevInstructionPrevOrientation = prevOrientation;
                     prevInstructionName = prevName;
                     ways.add(prevInstruction);
-                    prevAnnotation = annotation;
                 }
             }
             // Update the prevName, since we don't always create an instruction on name changes the previous
@@ -378,18 +323,12 @@ public class InstructionsFromEdges implements Path.EdgeVisitor {
         ways.add(finishInstruction);
     }
 
-    private int getTurn(EdgeIteratorState edge, int baseNode, int prevNode, int adjNode, InstructionAnnotation annotation, String name) {
+    private int getTurn(EdgeIteratorState edge, int baseNode, int prevNode, int adjNode, String name) {
         GHPoint point = InstructionsHelper.getPointForOrientationCalculation(edge, nodeAccess);
         double lat = point.getLat();
         double lon = point.getLon();
         prevOrientation = AngleCalc.ANGLE_CALC.calcOrientation(doublePrevLat, doublePrevLon, prevLat, prevLon);
         int sign = InstructionsHelper.calculateSign(prevLat, prevLon, lat, lon, prevOrientation);
-
-        boolean forceInstruction = false;
-
-        if (!annotation.equals(prevAnnotation) && !annotation.isEmpty()) {
-            forceInstruction = true;
-        }
 
         InstructionsOutgoingEdges outgoingEdges = new InstructionsOutgoingEdges(prevEdge, edge, encoder, maxSpeedEnc, roadClassEnc, roadClassLinkEnc, crossingExplorer, nodeAccess, prevNode, baseNode, adjNode);
         int nrOfPossibleTurns = outgoingEdges.getAllowedTurns();
@@ -403,7 +342,7 @@ public class InstructionsFromEdges implements Path.EdgeVisitor {
                 // TODO if we see issue with this approach we could consider checking if the edge is a oneway
                 return sign;
             }
-            return returnForcedInstructionOrIgnore(forceInstruction, sign);
+            return Instruction.IGNORE;
         }
 
         // Very certain, this is a turn
@@ -413,7 +352,7 @@ public class InstructionsFromEdges implements Path.EdgeVisitor {
              * bending. We should only do this, if following the street is the obvious choice.
              */
             if (InstructionsHelper.isNameSimilar(name, prevName) && outgoingEdges.outgoingEdgesAreSlowerByFactor(2)) {
-                return returnForcedInstructionOrIgnore(forceInstruction, sign);
+                return Instruction.IGNORE;
             }
 
             return sign;
@@ -459,7 +398,7 @@ public class InstructionsFromEdges implements Path.EdgeVisitor {
                 // this approach only works for major roads, for minor roads it can be hard to differentiate easily in real life
                 if (roadClass == RoadClass.MOTORWAY || roadClass == RoadClass.TRUNK || roadClass == RoadClass.PRIMARY || roadClass == RoadClass.SECONDARY || roadClass == RoadClass.TERTIARY) {
                     if ((roadClass == prevRoadClass && link == prevLink) && (otherRoadClass != prevRoadClass || otherLink != prevLink)) {
-                        return returnForcedInstructionOrIgnore(forceInstruction, sign);
+                        return Instruction.IGNORE;
                     }
                 }
 
@@ -491,12 +430,6 @@ public class InstructionsFromEdges implements Path.EdgeVisitor {
             }
         }
 
-        return returnForcedInstructionOrIgnore(forceInstruction, sign);
-    }
-
-    private int returnForcedInstructionOrIgnore(boolean forceInstruction, int sign) {
-        if (forceInstruction)
-            return sign;
         return Instruction.IGNORE;
     }
 
