@@ -347,29 +347,6 @@ public class InstructionListTest {
         assertEquals("3-4", Instructions.find(wayList, 15.099, 9.9, 1000).getName());
     }
 
-    @Test
-    public void simpleAnnotations() {
-        Graph graph = createTestGraph();
-
-        EnumEncodedValue<RoadEnvironment> roadEnvEnc = carManager.getEnumEncodedValue(RoadEnvironment.KEY, RoadEnvironment.class);
-        EnumEncodedValue<RoadAccess> roadAccessEnc = carManager.getEnumEncodedValue(RoadAccess.KEY, RoadAccess.class);
-        EdgeIteratorState edge1 = GHUtility.getEdge(graph, 7, 8);
-        edge1.set(roadEnvEnc, RoadEnvironment.FERRY);
-
-        EdgeIteratorState edge2 = GHUtility.getEdge(graph, 8, 9);
-        edge2.set(roadAccessEnc, RoadAccess.PRIVATE);
-
-        Weighting weighting = new FastestWeighting(carEncoder);
-        final InstructionList ways = new InstructionList(usTR);
-        InstructionsFromEdges instrFromEdges = new InstructionsFromEdges(graph, weighting, carManager, usTR, ways);
-        instrFromEdges.next(edge1, 0, EdgeIterator.NO_EDGE);
-        instrFromEdges.next(edge2, 1, edge1.getEdge());
-        instrFromEdges.finish();
-
-        assertEquals("take the ferry", ways.get(0).getAnnotation().getMessage());
-        assertEquals("private road", ways.get(1).getAnnotation().getMessage());
-    }
-
     private void compare(List<List<Double>> expected, List<List<Double>> actual) {
         for (int i = 0; i < expected.size(); i++) {
             List<Double> e = expected.get(i);
