@@ -17,16 +17,19 @@
  */
 package com.graphhopper.jackson;
 
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
 import com.fasterxml.jackson.core.JsonGenerator;
 import com.fasterxml.jackson.databind.JsonSerializer;
 import com.fasterxml.jackson.databind.SerializerProvider;
 import com.graphhopper.util.Helper;
 import com.graphhopper.util.Instruction;
-import com.graphhopper.util.InstructionAnnotation;
 import com.graphhopper.util.InstructionList;
-
-import java.io.IOException;
-import java.util.*;
 
 public class InstructionListSerializer extends JsonSerializer<InstructionList> {
     @Override
@@ -37,15 +40,7 @@ public class InstructionListSerializer extends JsonSerializer<InstructionList> {
             Map<String, Object> instrJson = new HashMap<>();
             instrList.add(instrJson);
 
-            InstructionAnnotation ia = instruction.getAnnotation();
-            String text = instruction.getTurnDescription(instructions.getTr());
-            if (Helper.isEmpty(text))
-                text = ia.getMessage();
-            instrJson.put("text", Helper.firstBig(text));
-            if (!ia.isEmpty()) {
-                instrJson.put("annotation_text", ia.getMessage());
-                instrJson.put("annotation_importance", ia.getImportance());
-            }
+            instrJson.put("text", Helper.firstBig(instruction.getTurnDescription(instructions.getTr())));
 
             instrJson.put("street_name", instruction.getName());
             instrJson.put("time", instruction.getTime());
