@@ -23,8 +23,7 @@ public class InstructionListRepresentationTest {
         pl.add(52.514, 13.349);
         pl.add(52.5135, 13.35);
         pl.add(52.514, 13.351);
-        RoundaboutInstruction instr = new RoundaboutInstruction(Instruction.USE_ROUNDABOUT, "streetname",
-                new InstructionAnnotation(0, ""), pl)
+        RoundaboutInstruction instr = new RoundaboutInstruction(Instruction.USE_ROUNDABOUT, "streetname", pl)
                 .setDirOfRotation(-0.1)
                 .setRadian(-Math.PI + 1)
                 .setExitNumber(2)
@@ -44,8 +43,7 @@ public class InstructionListRepresentationTest {
         pl.add(52.514, 13.349);
         pl.add(52.5135, 13.35);
         pl.add(52.514, 13.351);
-        RoundaboutInstruction instr = new RoundaboutInstruction(Instruction.USE_ROUNDABOUT, "streetname",
-                new InstructionAnnotation(0, ""), pl)
+        RoundaboutInstruction instr = new RoundaboutInstruction(Instruction.USE_ROUNDABOUT, "streetname", pl)
                 .setRadian(-Math.PI + 1)
                 .setExitNumber(2)
                 .setExited();
